# gobs

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
assets/models/: bones.blend  bones.blend1  bones.fbx  gob.blend  gob.blend1  gob.fbx  gob.mtl  pipe_ring.ply  pipe_turn_horizontal.ply  pipe_turn_vertical.ply  pipe_valve.ply  pipes.blend  pipes.blend1  rail_cart.blend  rail_cart.blend1  rail_cart_tank.ply  rail_cart_tank_1.ply  rail_cart_tank_2.ply  rail_curve.blend  rail_curve.blend1  rail_straight.blend  rail_straight.blend1  tank.blend  tank.blend1  tank.ply
assets/shaders/: grid_fs.glsl  grid_vs.glsl  helpers.glsl  line_fs.glsl  line_vs.glsl  liquid_fs.glsl  liquid_vs.glsl  model_fs.glsl  model_static_vs.glsl  model_vs.glsl  text_fs.glsl  text_vs.glsl  wireframe_fs.glsl
assets/textures/: bones.psd  dirt.psd  gob.psd  pipes.psd  planks.psd  rail.psd  rail_cart.psd  rock.psd  rock_ground.psd  tilemap.psd  water.psd
src/: animation.cpp  animation.hpp  animations.cpp  animations.hpp  animator.cpp  animator.hpp  assimp.cpp  assimp.hpp  base.cpp  base.hpp  bone.cpp  bone.hpp  bounds.cpp  bounds.hpp  camera.cpp  camera.hpp  constants.cpp  constants.hpp  cube.cpp  cube.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  indexed_verts.hpp  input.cpp  input.hpp  ivec2.cpp  ivec2.hpp  lattice.cpp  lattice.hpp  level.cpp  level.hpp  levels.cpp  levels.hpp  light.hpp  lights.cpp  lights.hpp  liquid.cpp  liquid.hpp  (+46 more)
